objects/OpportunityRecordTypeTransition__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Custom Settings to maintain the oppty record type change based on Initial solution Interest, Type and Stage</description>
    <fields>
        <fullName>Initial_Solution_Interest__c</fullName>
        <label>Initial Solution Interest</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_Id__c</fullName>
        <label>Record Type Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <label>Record Type Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Opportunity Record Type Transition</label>
    <listViews>
        <fullName>Custom_Setting_Details</fullName>
        <columns>NAME</columns>
        <columns>Initial_Solution_Interest__c</columns>
        <columns>Type__c</columns>
        <columns>Stage__c</columns>
        <columns>Record_Type_Name__c</columns>
        <columns>Record_Type_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>Custom Setting Details</label>
    </listViews>
</CustomObject>